--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,16 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.startDate=Начальная дата (включительно):
+meal.endDate=Конечная дата (включительно):
+meal.startTime=С (включительно):
+meal.endTime=По :
+meal.filter=Фильтровать
+meal.add=Добавить еду
+meal.date=Дата
+meal.description=Описание
+meal.calories=Калории
+mealForm.dateTime=Дата и Время
+mealForm.description=Описание
+mealForm.calories=Калории
 common.select=Выбрать
